infra/cert-manager-network-policies/allow-http.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-outbound-http
spec:
  # Required to call external APIs (e.g. Cloudflare)
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
  podSelector: {} # All pods in the namespace
  policyTypes:
  - Egress
