infra/cert-manager-network-policies/allow-inbound-metric-collection.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-inbound-metric-collection
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: TBA
    ports:
    - port: 9402
      protocol: TCP
  podSelector:
    matchLabels:
      app: cert-manager
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: cert-manager
  policyTypes:
  - Ingress
