infra/cert-manager-network-policies/allow-inbound-webhook.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-inbound-webhook
spec:
  podSelector: 
    matchLabels:
      app: webhook
  ingress:
    # Allow calls from Kube API
    # Rules are in overlays
  policyTypes:
  - Ingress
