infra/cert-manager-network-policies/allow-internal.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-internal
spec:
  # Allow any communication between cert-manager components
  ingress:
    - from:
      - podSelector: {}
  egress:
  - to:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
