infra/cert-manager-network-policies/allow-outbound-dns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-allow-outbound-dns
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  - ports: # Allow external DNS to allow checking the dns01 challenge
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.0.0.0/8
          - 192.0.0.0/8
  podSelector: {}
  policyTypes:
  - Egress
